# wasm-chrome-boilerplate

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  bootstrap.js  index.html  index.js  package.json  tsconfig.json  webpack.config.js
crate/: .gitignore  Cargo.toml
crate/src/examples/: fib.rs
src/: examples.rs  lib.rs
src/background/: background.js  background.ts
src/content/: content.js  content.ts
src/popup/: bootstrap.js  index.html  index.js  index.ts  style.scss
webpack/: webpack.common.js
www/: .gitignore  index.js  package.json  webpack.config.js
